After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 597214 - [avidemux] Fix printf formats to avoid warnings in avidemux
[avidemux] Fix printf formats to avoid warnings in avidemux
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Mac OS
: Normal normal
: 0.10.17
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-10-03 15:21 UTC by Robert Swain
Modified: 2009-10-03 15:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix printf formats to avoid warnings in avidemux (4.11 KB, patch)
2009-10-03 15:21 UTC, Robert Swain
committed Details | Review

Description Robert Swain 2009-10-03 15:21:59 UTC
Created attachment 144669 [details] [review]
Fix printf formats to avoid warnings in avidemux

See attached. This avoids warnings during compilation of
gst-plugins-good/gst/avi/gstavidemux.c and so fixing compilation when warnings
are considered errors.
Comment 1 Edward Hervey 2009-10-03 15:26:05 UTC
commit c45c304a7e4c875a0c5887f5d56fbe6c2da901d3
Author: Robert Swain <robert.swain@gmail.com>
Date:   Sat Oct 3 17:18:28 2009 +0200

    Fix printf formats to avoid warnings in avidemux. Fixes #597214
    
    https://bugzilla.gnome.org/show_bug.cgi?id=597214