Fix printf formats to avoid warnings in avidemux. Fixes #597214

https://bugzilla.gnome.org/show_bug.cgi?id=597214